# load_balancer

./: CMakeLists.txt  main.cpp
include/: load_balancer.h  server.h
src/: load_balancer.cpp  server.cpp
static/css/: style.css
static/js/: scriprt.js
templates/: index.html
